# wip

./: .gitignore  README.md  env.yml  pyproject.toml
notebooks/: clustering.ipynb  visualise.ipynb
src/wip/: infrastructure.py
src/wip/analysis/: base.py  mmpbsa.py  rmsd.py
src/wip/scripts/: run_julia.py
src/wip/scripts/simulation/: emin_bsm.jl  emin_openmm.py  prep.jl
src/wip/setup/: convert.py  inspect.py  tleap.py
tests/: test_wip.py
